# opm-linear-solver-lab

./: .gitignore  CMakeLists.txt  README.md
benchmarking_scripts/: plotting.py  process_and_plot.py  process_and_plot_amgcl.py  process_and_plot_opm.py  run_amgcl_benchmark.py  run_benchmark.py  run_opm_benchmark.py
build_helpers/: prefix_path.sh
cmake/Modules/: VexCLSetup.cmake
examples/configurations/amgcl/: amgcl_cpr_drs_setup.json  amgcl_cpr_options.json  amgcl_ilu0_options.json  amgcl_spai0_options.json  amgcl_spai1_options.json
examples/configurations/cpu/: dilu.json  ilu0.json  ilu0_onlypreconditioner.json
examples/configurations/gpu/: cudilu.json  cuilu0.json  cuilu0_onlypreconditioner.json
examples/matrices/spe1/: matrix.mm  rhs.mm
src/: config.hpp.in  main.cpp  petsc.cpp  read_binary.hpp
src/matrix_property_analysis/: MPI_sparsity_analysis.ipynb  inspect_matrix.ipynb  plot_all_mpi_ranks_in_one.ipynb  sparsity_analysis.ipynb
tests/: test_read_binary.cpp
